--- a/web/templates/player.tmpl
+++ b/web/templates/player.tmpl
@@ -21,10 +21,10 @@
       </div>
     </div>
     <div class="col">
-      <input hidden name="suuid" id="suuid" value="{{ .suuid }}">
-      <input hidden name="port" id="port" value="{{ .port }}">
-      <input hidden id="localSessionDescription" readonly="true">
-      <input hidden id="remoteSessionDescription">
+      <input type="hidden" name="suuid" id="suuid" value="{{ .suuid }}">
+      <input type="hidden" name="port" id="port" value="{{ .port }}">
+      <input type="hidden" id="localSessionDescription" readonly="true">
+      <input type="hidden" id="remoteSessionDescription">
       <div id="remoteVideos">
         <video style="width:600px" id="videoElem" autoplay muted></video>
       </div>
